--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul>
            <li class="item"><a href="index.html" class="active">Home</a></li>
-           <li class="item"><a href=".html">Instruments</a></li>
+           <li class="item"><a href="instruments.html">Instruments</a></li>
            <li class="item"><a href="about.html">About</a></li>
            <li class="item"><a href="blog.html">Blog</a></li>
            <li class="item"><a href="contact.html">Contact Us</a></li>
